fixed AI service, modified journal html's